WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259466
REGRESSION(
266167@main
): [non-Cocoa] Some http/tests/security/mixedContent tests are failing
https://bugs.webkit.org/show_bug.cgi?id=259466
Summary
REGRESSION(266167@main): [non-Cocoa] Some http/tests/security/mixedContent te...
Fujii Hironori
Reported
2023-07-24 19:15:34 PDT
REGRESSION(
266167@main
): [non-Cocoa] Some http/tests/security/mixedContent tests are failing After
266167@main
(
bug#259324
)
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fsecurity%2Fcredentials-iframes.html
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fsecurity%2FmixedContent%2Finsecure-basic-auth-image.https.html
http/tests/security/credentials-iframes.html [ Failure Pass ] http/tests/security/mixedContent/insecure-basic-auth-image.https.html [ Failure Pass ] http/tests/security/mixedContent/insecure-image-redirects-to-basic-auth-secure-image.html [ Failure Pass ] http/tests/security/mixedContent/secure-redirect-to-insecure-redirect-to-basic-auth-secure-image.https.html [ Failure Pass ] http/tests/security/mixedContent/secure-redirect-to-secure-redirect-to-basic-auth-insecure-image.https.html [ Failure Pass ] http/tests/security/mixedContent/secure-redirect-to-secure-redirect-to-basic-auth-secure-image.https.html [ Failure Pass ]
266231@main
fixed Cocoa port problem. non-Cocoa ports need the similar fix.
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2023-07-24 19:23:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16057
EWS
Comment 2
2023-07-25 12:52:36 PDT
Committed
266298@main
(1cf603b84515): <
https://commits.webkit.org/266298@main
> Reviewed commits have been landed. Closing PR #16057 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-07-25 12:53:20 PDT
<
rdar://problem/112852931
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug