REGRESSION(266167@main): [non-Cocoa] Some http/tests/security/mixedContent tests are failing https://bugs.webkit.org/show_bug.cgi?id=259466

Reviewed by Don Olmstead.

Some http/tests/security/mixedContent tests are failing after
266167@main (bug#259324) due to a preceding tests configuration
change. 266231@main fixed the Cocoa port problem by recreating a
WKPreferencesRef object. non-Cocoa ports also need the similar fix.

* Tools/WebKitTestRunner/TestController.cpp:
(WTR::TestController::platformAdjustContext):
Recreate a WKPreferencesRef object.

Canonical link: https://commits.webkit.org/266298@main